# wuxing_skills

./: .aiderignore  .gitignore  .ignore  AGENT_CODE_STANDARD.md  ANDROID_NOTICES.md  CLAUDE.md  CMakeLists.txt  COMPUTE_API.md  COMPUTE_ISSUES.md  CORE_API.md  CORE_API_SHORT.md  CORE_ISSUES.md  CPackConfig.cmake  CPackSourceConfig.cmake  DOC_MAINTENANCE.md  ENTITIES_API.md  ENTITIES_ISSUES.md  ENVIRONMENT_API.md  FORCE_FIELD_GUIDE.md  GEMINI.md  MAP_API.md  Makefile.Android  SKILLS_CREATION_GUIDE.md  VFX_ARCHITECTURE.md  WUXING_ART_DIRECTION.md  WUXING_ART_DIRECTION_SHORT.md  WUXING_SKILL_CORE_API.md  WUXING_SKILL_CORE_API_SHORT.md  WuxingSkillDesignBible.md  color_gradient.c  color_gradient.h  electric_skill.c  electric_skill.h  emitter_system.c  emitter_system.h  fire.fs  fire_skill.c  fire_skill.h  flow_map.c  flow_map.h  (+45 more)
.agents/: AGENTS.md
.agents/skills/core/: SKILL.md
.agents/skills/core_system/: SKILL.md
.agents/skills/doc_improver/: SKILL.md
.agents/skills/environment_manager/: SKILL.md
.agents/skills/map_creator/: SKILL.md
.agents/skills/skills/: SKILL.md
android.wuxing_skills/: AndroidManifest.xml  wuxing_skills.keystore
android.wuxing_skills/assets/: electric.fs  fluid.vs  metal.fs
android.wuxing_skills/raylib_build/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_uninstall.cmake
android.wuxing_skills/raylib_build/raylib/: CTestTestfile.cmake  raylib.pc
android.wuxing_skills/res/values/: strings.xml
compute/: CLAUDE.md  gpu_particle_system.c  gpu_particle_system.h
compute/shaders/: gpu_particles.comp  gpu_particles.fs  gpu_particles_ssbo.vs
core/: CLAUDE.md  FORCE_FIELD_GUIDE.md  camera_fx.c  camera_fx.h  color_gradient.c  color_gradient.h  debug_draw.c  debug_draw.h  decal_system.c  decal_system.h  emitter_system.c  emitter_system.h  float_curve.c  float_curve.h  flow_map.c  force_field.c  force_field.h  gpu_particle_system.c  gpu_particle_system.h  impact_burst.c  impact_burst.h  map_manager.c  map_manager.h  maps_generated.h  metaball_fx.c  metaball_fx.h  particle_radial_burst.c  particle_radial_burst.h  particle_system.c  particle_system.h  path_spline.c  path_spline.h  post_fx.c  post_fx.h  procedural_mesh_utils.c  procedural_mesh_utils.h  resource_manager.c  resource_manager.h  ribbon_strip.c  sandbox_core.c  (+25 more)
core/shaders/: additive_soft.fs  bloom_blur.fs  bloom_bright.fs  bloom_downsample.fs  bloom_upsample.fs  decal.fs  decal_flow.fs  depth_copy.fs  dissolve.fs  distortion.fs  effect_material.fs  effect_material.vs  gpu_particles.comp  gpu_particles_vbo.vs  metaball_threshold.fs  particles.comp  particles.fs  particles_cpu.fs  particles_cpu.vs  post_process.fs  rim_glow.fs  taiji.fs
core/shaders/common/: displacement.glsl  fs_header.glsl  fx.glsl  lighting.glsl  noise.glsl  soft_particle.glsl  triplanar.glsl  vs_header.glsl
entities/: CLAUDE.md  entities.c  entities.h
environment/: CLAUDE.md  environment_system.c  environment_system.h
maps/: CLAUDE.md
maps/bamboo_valley/: bamboo_alpha.fs  bamboo_valley.c  bamboo_valley.h
maps/default_arena/: default_arena.c  default_arena.h
maps/meadow_night/: meadow_night.c  meadow_night.h
maps/soft_test_ground/: soft_test_ground.c  soft_test_ground.h
sandbox/: CLAUDE.md  auto_test.c  auto_test.h  sandbox_core.c  sandbox_core.h  skill_debugger.c  skill_debugger.h  ui_panel.c  ui_panel.h  vfx_test.c
scripts/: convert_shaders_to_gles.py  generate_map_registry.py  generate_registry.py  process_decal_textures.py  process_textures.py
shaders/: flow_map.fs
skills/: CLAUDE.md
skills/earth/earth_shatter_skill/: earth_shatter.fs  earth_shatter_skill.c  earth_shatter_skill.h
skills/earth/earth_spikes/: earth_spikes.fs  earth_spikes_skill.c  earth_spikes_skill.h
skills/earth/seismic_pillars_skill/: seismic_pillars.fs  seismic_pillars.vs  seismic_pillars_skill.c  seismic_pillars_skill.h
skills/earth/stone_prison_skill/: stone_crack.fs  stone_prison.fs  stone_prison.vs  stone_prison_skill.c  stone_prison_skill.h
skills/earth/stone_spear/: stone_spear.fs  stone_spear_skill.c  stone_spear_skill.h
skills/fire/fire_ball/: fire.fs  fire_skill.c  fire_skill.h
skills/fire/hoa_long_phong_ba_skill/: hoa_long_phong_ba.fs  hoa_long_phong_ba.vs  hoa_long_phong_ba_skill.c  hoa_long_phong_ba_skill.h
skills/fire/liet_diem_tran_skill/: liet_diem_tran_skill.c  liet_diem_tran_skill.h
skills/metal/metal_projectile/: metal.fs  metal_skill.c  metal_skill.h
skills/metal/sword_rain/: sword_rain_skill.c  sword_rain_skill.h
skills/taiji/core_test/: core_test.fs  core_test.vs  core_test_dissolve.fs  core_test_grid.vs  core_test_skill.c  core_test_skill.h  core_test_soft.fs  core_test_soft.vs  core_test_triplanar.fs  core_test_twist.vs
skills/taiji/lightning/: electric.fs  electric_skill.c
skills/taiji/wind_storm/: wind_skill.c  wind_skill.h
skills/water/cloud_dragon_skill/: cloud_dragon.vs  cloud_dragon_skill.c  cloud_dragon_skill.h  orb.fs  tube.fs
skills/water/frost_blossom_rain_skill/: frost_blossom_rain.fs  frost_blossom_rain.vs  frost_blossom_rain_skill.c  frost_blossom_rain_skill.h
skills/water/gleaming_orb_skill/: gleaming_orb.fs  gleaming_orb.vs  gleaming_orb_skill.c  gleaming_orb_skill.h
skills/water/hydro_maelstrom_skill/: hydro_maelstrom.fs  hydro_maelstrom.vs  hydro_maelstrom_skill.c  hydro_maelstrom_skill.h
skills/water/tsunami_skill/: tsunami.fs  tsunami.vs  tsunami_skill.c  tsunami_skill.h
skills/water/tsunami_surge_skill/: tsunami_surge.fs  tsunami_surge.vs  tsunami_surge_skill.c  tsunami_surge_skill.h
skills/water/water_orb_skill/: water_orb_skill.c  water_orb_skill.h
skills/water/water_projectile/: fluid.fs  fluid_skill.c
skills/water/water_shield/: shield.vs  shield_skill.c  shield_skill.h
skills/water/water_sphere_skill/: water_sphere.fs  water_sphere.vs  water_sphere_skill.c  water_sphere_skill.h
skills/water/water_stream/: tube.fs  tube.vs  tube_skill.c  tube_skill.h
skills/wood/emerald_thorns_skill/: emerald_thorns_skill.c  emerald_thorns_skill.h  thorn.fs  thorn.vs.txt
skills/wood/living_vine_skill/: living_vine.fs  (+3 more)
(+11 files in other folders)
